# rdf4j

./: .gitattributes  .gitignore  .gitignore.orig  .gitmodules  .pullapprove.yml  .travis.yml  AGENTS.md  AGENTS_temp.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  EXECPLAN-adaptive-filter-placement.md  EXECPLAN-hybrid-join-optimizer.md  EXECPLAN-lmdb-native-admission.md  EXECPLAN-overnight-optimizer-v2.md  EXECPLAN-sparql-correctness.md  GH-5905-failing-evidence.txt  GH-5905-final-evidence.txt  GH-5905-scope-safety-failing-evidence.txt  GH-5905-scope-safety-passing-evidence.txt  Gemfile  HASH_OPTIMIZATION_SUMMARY.md  LICENSE  LMDB_ISOLATION_EXECPLAN.md  LOCK_BATCHING_OPTIMIZATION.md  LOCK_STRIPING_IMPLEMENTATION_SUMMARY.md  PLANS.md  README.adoc  README.md  SECURITY.md  TupleExprIRRenderer-plan.md  TupleExprIRRenderer-report.md  _config.yml  about.md  build-html  context-batching-optimization.md  edl-v1.0.txt  execplan-factorized-rows-pipeline.md  execplan-factorized-tail-aggregation.md  execplan-lmdb-native-leftjoin.md  (+40 more)
.agent/: GH_5905_ALGEBRA_EQUIVALENCE_CERTIFICATION_EXEC_PLAN.md  GH_5905_ALGEBRA_EQUIVALENCE_EXEC_PLAN.md  GH_5905_SCOPE_SAFETY_EXEC_PLAN.md  GH_5905_TUPLE_EXPR_JSON_ROUND_TRIP_EXEC_PLAN.md  KUZU_CORRECTNESS_PERFORMANCE_EXEC_PLAN.md  execplan-lmdb-delete-legacy-sketch-planner.md  execplan-lmdb-double-tps.md  execplan-lmdb-factorized-correctness-audit.md  execplan-lmdb-load-ten-x.md  execplan-lmdb-native-aggregate-compiler-refactor.md  execplan-lmdb-native-execution-kernels.md  execplan-lmdb-native-experimental-package.md  execplan-lmdb-ordered-distinct-frontiers.md  execplan-lmdb-p1-correctness-bounds.md  execplan-lmdb-phase1-engagement-and-substrate.md  execplan-lmdb-phase10-ordered-numeric-ids.md  execplan-lmdb-phase11-csr-scan-substrate.md  execplan-lmdb-phase2-factorized-chunk-pipeline.md  execplan-lmdb-phase3-joins-aggregation-on-chunks.md  execplan-lmdb-phase4-sort-order-exploitation.md  execplan-lmdb-phase5-orderby-topk-on-chunks.md  execplan-lmdb-phase6-exchange-parallelism.md  execplan-lmdb-phase7-range-partitioned-scans.md  execplan-lmdb-phase8-csr-adjacency-cache.md  execplan-lmdb-phase9-factorized-chunk-prefix.md  execplan-lmdb-prefix-run-scan.md  execplan-lmdb-query-ready-four-index-load.md  execplan-lmdb-scalar-tps.md  execplan-lmdb-stable-order-integration.md  execplan-lmdb-streaming-query-timeouts.md  execplan-lmdb-theme-loading-under-ten-seconds.md  execplan-lmdb-theme-regression-recovery.md  execplan-sparql-ast-regeneration.md  lmdb-long-id-sketch-estimator.md  native-guarantee-inferred-pareto-options.md  omni-witness-mmap-execplan.md  review-phases-7-10-retrospective.md
.codex/: config.toml
.github/: CODEOWNERS  CONTRIBUTING.md  CONTRIBUTING.md.orig  PULL_REQUEST_TEMPLATE.md
.m2_repo/: repository.xml
assembly/: pom.xml
assembly-descriptors/: pom.xml
assembly-hubdocker/: pom.xml
benchmark/: pom.xml  runBenchmarks.sh
bom/: pom.xml
build-tools/: pom.xml
client/: pom.xml
compliance/: pom.xml
config/: pom.xml
console/: pom.xml
core/: pom.xml
doc/: header.adoc  index.adoc  migration-guide.adoc  shared-settings.adoc
docker/: Dockerfile  Dockerfile-jetty  Dockerfile-tomcat  Dockerfile.amd64  README.md  README_DEV.md  build.sh  docker-compose.yml  run.sh  shutdown.sh  waitForDocker.sh
e2e/: .gitignore  README.md  package-lock.json  package.json  playwright.config.js  (+3 more)
mysql/components/library_mysys/: CMakeLists.txt  my_base64_encode.cc  my_hex_tools.cc  my_memory.cc  my_system.cc  option_tracker_usage.cc  option_usage_data.cc
mysql/components/library_mysys/my_system_api/: my_system_api.h  my_system_api_apple.cc  my_system_api_cgroup.cc  my_system_api_common.cc  my_system_api_freebsd.cc  my_system_api_linux.cc  my_system_api_solaris.cc  my_system_api_win.cc
mysql/components/telemetry/: CMakeLists.txt  TESTING.md  option_usage.cc  option_usage.h  tm_component.cc  tm_control.cc  tm_control.h  tm_global.cc  tm_global.h  tm_log.cc  tm_log.h  tm_mysql_metric.cc  tm_mysql_metric.h  tm_notification.cc  tm_notification.h  tm_ns.cc  tm_ns.h  tm_option_usage.cc  tm_option_usage.h  tm_otel_log.cc  tm_otel_log.h  tm_otel_metric.cc  tm_otel_metric.h  tm_otel_trace.cc  tm_otel_trace.h  tm_propagation.cc  tm_propagation.h  tm_psi.cc  tm_psi.h  tm_required_services.h  tm_resource.cc  tm_resource.h  tm_secret.cc  tm_secret.h  tm_setup_otel.cc  tm_setup_otel.h  tm_slot.cc  tm_slot.h  tm_status_variables.cc  tm_status_variables.h  (+4 more)
mysql/components/telemetry/test/: demo.html  demo.txt  docker-compose.yaml
mysql/components/telemetry/test/collector/: Dockerfile  otel-config.yaml
mysql/components/telemetry/test/loki/: Dockerfile-all  Dockerfile-backend  Dockerfile-read  Dockerfile-write  loki-config.yaml
mysql/components/telemetry/test/prometheus/: Dockerfile  prometheus.yaml
mysql/storage/ndb/test/crund/: CMakeLists.txt  runCrund.cpp
mysql/storage/ndb/test/crund/cpp/: CMakeLists.txt  CrundDriver.cpp  CrundDriver.hpp  CrundLoad.cpp  CrundLoad.hpp  Driver.cpp  Driver.hpp  Load.hpp  Makefile.obsolete  NdbapiAB.cpp  NdbapiAB.hpp  crund.cpp  crundAB.cpp
mysql/storage/ndb/test/crund/cpp/unused-tws/: NdbapiTwsDriver.cpp  NdbapiTwsDriver.hpp  TwsDriver.cpp  TwsDriver.hpp
mysql/storage/ndb/test/crund/helpers/: Properties.hpp  README.txt  helpers.hpp  hrt_gstopwatch.h  hrt_stopwatch.h  hrt_utils.h  string_helpers.hpp
mysql/storage/ndb/test/crund/helpers/src/: Properties_test.cpp  Properties_test.properties  hrt_gstopwatch.cpp  hrt_stopwatch.cpp  hrt_stopwatch_test.cpp  hrt_utils.cpp  hrt_utils_test.cpp
mysql/storage/ndb/test/crund/helpers/src/utils/: Makefile.obsolete
mysql/storage/ndb/test/crund/java/: CMakeLists.txt  ClusterjAB.java  ClusterjS.java  CrundDriver.java  CrundLoad.java  CrundSLoad.java  Driver.java  IA.java  IB.java  JdbcAB.java  JdbcDriverTest.java  JdbcS.java  Load.java  NdbjtieAB.java  NdbjtieS.java  ResultProcessor.java
mysql/unittest/gunit/temptable/: CMakeLists.txt  allocator-t.cc  allocator_helper.h  cell-t.cc  cell_calculator-t.cc  mock_field_varstring.h  result-t.cc  table_helper.h  temptable-handler-t.cc
(+111520 files in other folders)
